Loader with virtual threads